--- a/footer.html
+++ b/footer.html
@@ -1,3 +1,18 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <base href="/thptamsterdam/">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="/assets/img/logo.png">
+    <title>Trường THPT chuyên Hà Nội - Amsterdam</title>
+    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="/assets/font/themify-icons/themify-icons.css">
+    <link rel="stylesheet" href="/assets/font/fontawesome-free-6.7.2-web/css/all.min.css">
+    <base href="/thptamsterdam/">
+</head>
+<body>
+
 <footer id="footer">
     <div class="footer-category">
         <div class="margin-tp content-footer">
@@ -100,3 +115,5 @@
     <div class="clear"></div>
 
 </footer>
+</body>
+</html>
